<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_grey_color">

    <TextView
        android:id="@+id/raw_forget_password_popup_textview_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/color_dark_gray"
        android:textSize="@dimen/_13sdp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/raw_forget_password_popup_textview_enter_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/raw_forget_password_popup_textview_header"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/text_forget_password_popup"
        android:textColor="@color/color_dark_gray"
        android:textSize="@dimen/_13sdp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/raw_forget_password_popup_edittext_enter_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/raw_forget_password_popup_textview_enter_email"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/edittext_background_black"
        android:hint="@string/text_email_hint"
        android:inputType="textEmailAddress"
        android:padding="@dimen/_5sdp"
        android:text="" />

    <View
        android:id="@+id/raw_forget_password_popup_view_1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/raw_forget_password_popup_edittext_enter_email"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/color_black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/raw_forget_password_popup_view_1">

        <Button
            android:id="@+id/raw_forget_password_popup_button_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/text_ok"
            android:textSize="@dimen/_14sdp" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="@dimen/_50sdp"
            android:background="@color/color_black" />

        <Button
            android:id="@+id/raw_forget_password_popup_button_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/text_cancel"
            android:textSize="@dimen/_14sdp" />

    </LinearLayout>

</RelativeLayout>